# raytracing

./: .gitignore  README.md  animation.py  louis.py  main.py  pyproject.toml  requirements.txt  sophie.py  test.py
module/: coordinates.py  coordonees.py  engine.py  interface.py  raytracing.py  setup.py  spirale.py  texture.py  textures.py
module/json/: objects.json  objets_1.json  objets_2.json  settings.json
module/test/: test_coordonees.py  test_coordonnees.py  test_engine.py  test_raytracing.py  test_texture.py
