[project]
name = "Raytracing"
version = "0.1.0"
description = "Projet de raytracing dans le cadre du cours de SMATM110 Travaux Pratiques de Programmation de l'université de Namur"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.145.0",
    "imageio[ffmpeg,pyav]>=2.37.2",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
]
