[project]
name = "Raytracing"
version = "0.1.0"
description = "Projet de raytracing dans le cadre du cours de SMATM110 Travaux Pratiques de Programmation de l'université de Namur"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av==16.0.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "hypothesis==6.148.7",
    "imageio-ffmpeg==0.6.0",
    "imageio[ffmpeg,pyav]==2.37.2",
    "jax==0.8.2",
    "jaxlib==0.8.2",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "ml-dtypes==0.5.4",
    "numpy==2.4.0",
    "opt-einsum==3.4.0",
    "packaging==25.0",
    "pillow==12.0.0",
    "psutil==7.1.3",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "scipy==1.16.3",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
]
